syntax = "proto3";

option java_multiple_files = true;
option java_package = "event";

service EventService{
  rpc ExtractEventInfo (EventRequest) returns (EventResponse);
}

message EventRequest{
  int64 eventId = 1;
}

message EventResponse{
  bool exists = 1;
  optional double price = 2;
  optional string eventName = 3;
  optional string eventCategory = 4;
  string message = 5;
}